--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,10 @@ jobs:
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
     - name: Pack
       run: |
-        dotnet pack -v normal -c Release -p:PackageVersion=${VERSION} testPackagesProject.csproj --output .        
+        dotnet pack -v normal -c Release -p:PackageVersion=${VERSION} testPackagesProject.csproj --output .
+    - name: List files
+      run: |
+        ls
     - name: Push
       run: |
         dotnet nuget push TestNugetPackageId.TestPackagePublish.${VERSION}.nupkg --source ${PACKAGE_SOURCE} --api-key ${{ secrets.NUGET_API_KEY }}
