--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-    - 'v[0-9]+\.[0-9]+\.[0-9]+-alph[0-9][0-9][0-9]-*'
+    - 'v[0-9]+\.[0-9]+\.[0-9]+-alph[0-9][0-9][0-9].*'
     
 env:
   PACKAGE_SOURCE: ${{ vars.PACKAGE_SOURCE || 'nonValidPackageSource' }}
@@ -25,3 +25,10 @@ jobs:
     - name: List files
       run: |
         ls
+    - name: Push
+      run: |
+        if [ -n "${{ secrets.NUGET_API_KEY }}" ]; then
+          dotnet nuget push "TestNugetPackageId.TestPackagePublish.${VERSION}.nupkg" --source "${PACKAGE_SOURCE}" --api-key "${{ secrets.NUGET_API_KEY }}"
+        else
+          dotnet nuget push "TestNugetPackageId.TestPackagePublish.${VERSION}.nupkg" --source "${PACKAGE_SOURCE}" --api-key "${{ secrets.GITHUB_TOKEN }}"
+        fi
