--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         ls
     - name: Push
+      permissions: 
+        packages: read/write
       run: |
         if [ -n "${{ secrets.NUGET_API_KEY }}" ]; then
           dotnet nuget push "TestNugetPackageId.TestPackagePublish.${VERSION}.nupkg" --source https://api.nuget.org/v3/index.json --api-key "${{ secrets.NUGET_API_KEY }}"
