--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     permissions: 
-      packages: read/write
+      packages: write
     steps:
     - name: Checkout
       uses: actions/checkout@v2
